--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,8 @@
                   "with": "src/environments/environment.production.ts"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "optimization": true
             },
             "development": {
               "optimization": false,
@@ -44,12 +45,15 @@
         "serve": {
           "builder": "@angular/build:dev-server",
           "options": {
-            "port": 3000,
-            "buildTarget": "app:build:development"
+            "buildTarget": "app:build:development",
+            "port": 3000
           },
           "configurations": {
             "production": {
               "buildTarget": "app:build:production"
+            },
+            "development": {
+              "buildTarget": "app:build:development"
             }
           },
           "defaultConfiguration": "development"
